# django_avito

./: manage.py  pyproject.toml
ads/: models.py  serializer.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py
authentication/: serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
django_avito/: asgi.py  settings.py  urls.py  wsgi.py
